--- a/css/typography.css
+++ b/css/typography.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Avenir LT Std';
+    font-family: 'Avenir LT Std', sans-serif;
     font-weight: normal;
     font-style: normal;
     font-size: 16px;
