--- a/css/components/header.css
+++ b/css/components/header.css
@@ -9,9 +9,9 @@
 	padding-bottom: 60px;
 	height: 100%;
 	background-color: #11091FF2;
-/*	background-image: url('../../assets/header.jpg');
+	background-image: url('../../assets/header.png');
 	background-repeat: no-repeat;
 	background-position: center center;
-	background-size: cover;*/
+	background-size: cover;
 	text-align: center;
 }
