--- a/css/components/media.css
+++ b/css/components/media.css
@@ -6,7 +6,9 @@
 
 .media__icon {
 	display: block;
-	flex: 1 0 100px;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 0 100px;
+	        flex: 1 0 100px;
 	margin-right: 15px;
 }
 
