--- a/css/typography.css
+++ b/css/typography.css
@@ -22,10 +22,6 @@ h3 {
     font-size: 22px;
 }
 
-h3.small {
-    font-size: 18px;
-}
-
 h4 {
     font-size: 20px;
 }
@@ -38,7 +34,7 @@ h6 {
     font-size: 16px;
 }
 
-p.lead {
+p.lead, .large {
     font-size: 1.2rem;
 }
 
@@ -86,6 +82,13 @@ th {
 
 .table--border {
     width: 100%;
+    white-space: nowrap;
+}
+
+.table--border th {
+    background-color: #924CCC;
+    color: white;
+    text-align: left;
 }
 
 .table--border, .table--border td {
