--- a/css/main.css
+++ b/css/main.css
@@ -10,4 +10,5 @@
 @import url('components/media.css');
 @import url('components/carousel.css');
 @import url('components/form.css');
+@import url('components/charts.css');
 @import url('components/footer.css');
