--- a/css/components/card.css
+++ b/css/components/card.css
@@ -4,9 +4,9 @@
 }
 
 .card {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
+	display: -webkit-box !important;
+	display: -ms-flexbox !important;
+	display: flex !important;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
@@ -14,11 +14,35 @@
 	padding: 50px 50px 100px;
 }
 
+.card__header {
+	margin-bottom: 25px;
+	height: 200px;
+	background: url(../assets/placeholder.png) center center/cover no-repeat;
+}
+
 .card__body {
-	-webkit-box-flex: 1;
-	-ms-flex: 1;
-	flex: 1;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
 	padding-bottom: 20px;
+}
+
+.card__body h3 {
+    color: #4D3381;
+    font-size: 20px;
+}
+
+/*Card - modifiers*/
+.card--blog {
+	margin-left: 10px;
+	margin-right: 10px;
+	padding: 10px 15px 25px;
+	background: white;
+	border-radius: 10px;
+}
+
+.card--blog .card__body {
+	padding-bottom: 0;
 }
 
 @media all and (min-width: 1200px) {
